--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,12 @@ dependencies:
   provider: ^6.1.1
   network_info_plus: ^4.1.0
   permission_handler: ^11.0.1
+  firebase_core: ^2.22.0
+  firebase_auth: ^4.14.0
+  cloud_firestore: ^4.13.1
+  json_annotation: ^4.8.1
+  visibility_detector: ^0.4.0+2
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +56,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
