--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   json_annotation: ^4.8.1
   visibility_detector: ^0.4.0+2
   web_socket_channel: ^2.4.0
+  flutter_spinbox: ^0.13.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
