--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,20 +34,21 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  flutter_blue_plus: ^1.29.3
-  provider: ^6.1.1
+  cupertino_icons: ^1.0.6
+  flutter_blue_plus: ^1.31.16
+  provider: ^6.1.2
   network_info_plus: ^4.1.0
-  permission_handler: ^11.0.1
-  firebase_core: ^2.22.0
-  firebase_auth: ^4.14.0
-  cloud_firestore: ^4.13.1
+  permission_handler: ^11.3.0
+  firebase_core: ^2.27.0
+  firebase_auth: ^4.17.8
+  cloud_firestore: ^4.15.8
   json_annotation: ^4.8.1
   visibility_detector: ^0.4.0+2
-  web_socket_channel: ^2.4.0
+  web_socket_channel: ^2.3.0
   flutter_spinbox: ^0.13.1
-  intl: ^0.18.1
+  intl: ^0.19.0
   input_quantity: ^2.2.0
+  async: ^2.11.0
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +60,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.1
-  build_runner: ^2.4.6
+  build_runner: ^2.4.8
   json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
