--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   intl: ^0.19.0
   input_quantity: ^2.3.2
   async: ^2.11.0
+  flutter_svg: ^2.0.10+1
   flutter_screenutil: ^5.9.0
 
 dev_dependencies:
