--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   intl: ^0.19.0
   input_quantity: ^2.3.2
   async: ^2.11.0
+  flutter_local_notifications: ^17.0.0
+  firebase_messaging: ^14.8.0
 
 dev_dependencies:
   flutter_test:
