--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   flutter_screenutil: ^5.9.0
   flutter_local_notifications: ^17.0.0
   firebase_messaging: ^14.8.0
+  secure_shared_preferences: ^0.0.4
+  sms_autofill: ^2.3.1
+  flutter_timezone: ^1.0.8
 
 dev_dependencies:
   flutter_test:
