--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   secure_shared_preferences: ^0.0.4
   sms_autofill: ^2.3.1
   flutter_timezone: ^1.0.8
+  iphone_has_notch: ^1.0.0
 
 dev_dependencies:
   flutter_test:
