Finish login/registering/signout flow

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   sms_autofill: ^2.3.1
   flutter_timezone: ^1.0.8
   iphone_has_notch: ^1.0.0
+  firebase_app_check: ^0.2.2+1
 
 dev_dependencies:
   flutter_test:
