--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   flutter_timezone: ^1.0.8
   iphone_has_notch: ^1.0.0
   firebase_app_check: ^0.2.2+1
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
