--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   firebase_app_check: ^0.2.2+1
   http: ^1.2.1
   uuid: ^4.4.0
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   flutter_test:
