--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   json_annotation: ^4.8.1
   visibility_detector: ^0.4.0+2
   web_socket_channel: ^2.4.4
-  intl: ^0.19.0
+  intl: ^0.18.0
   input_quantity: ^2.3.2
   async: ^2.11.0
   flutter_svg: ^2.0.10+1
@@ -60,6 +60,7 @@ dependencies:
   http: ^1.2.1
   uuid: ^4.4.0
   pin_code_fields: ^8.0.1
+  intl_translation: ^0.19.0
 
 dev_dependencies:
   flutter_test:
