--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   uuid: ^4.4.0
   pin_code_fields: ^8.0.1
   intl_translation: ^0.19.0
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   flutter_test:
