--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   pin_code_fields: ^8.0.1
   intl_translation: ^0.20.0
   url_launcher: ^6.2.6
+  sunrise_sunset_calc: ^3.0.0
 
 dev_dependencies:
   flutter_test:
