--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   intl_translation: ^0.20.0
   url_launcher: ^6.2.6
   sunrise_sunset_calc: ^3.0.0
+  in_app_review: ^2.0.9
 
 dev_dependencies:
   flutter_test:
