Changes on profile picture

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   sunrise_sunset_calc: ^3.0.0
   in_app_review: ^2.0.9
   image_picker: ^1.1.2
+  wifi_scan: ^0.4.1
 
 dev_dependencies:
   flutter_test:
