--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   in_app_review: ^2.0.9
   image_picker: ^1.1.2
   wifi_scan: ^0.4.1
+  intl_phone_number_input: ^0.7.4
 
 dev_dependencies:
   flutter_test:
