--- a/ios/Podfile
+++ b/ios/Podfile
@@ -54,4 +54,15 @@ post_install do |installer|
           File.open(xcconfig_path, "w") { |file| file << xcconfig_mod }
     end
   end
+    ################  Awesome Notifications pod modification  ###################
+    awesome_pod_file = File.expand_path(File.join('plugins', 'awesome_notifications', 'ios', 'Scripts', 'AwesomePodFile'), '.symlinks')
+    require awesome_pod_file
+    update_awesome_pod_build_settings(installer)
+    ################  Awesome Notifications pod modification  ###################
 end
+  
+################  Awesome Notifications pod modification  ###################
+awesome_pod_file = File.expand_path(File.join('plugins', 'awesome_notifications', 'ios', 'Scripts', 'AwesomePodFile'), '.symlinks')
+require awesome_pod_file
+update_awesome_main_target_settings('Runner', File.dirname(File.realpath(__FILE__)), flutter_root)
+################  Awesome Notifications pod modification  ###################
