--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ dependencies:
   image_picker: ^1.1.2
   wifi_scan: ^0.4.1
   intl_phone_number_input: ^0.7.4
+  awesome_notifications_core: ^0.9.0 
+  awesome_notifications: any 
 
 dev_dependencies:
   flutter_test:
