notifications UI on iOS

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
     </intent>
     </queries>
     <application
-        android:label="LiviPod"
+        android:label="LiviPod App"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
