--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   image_picker: ^1.1.2
   wifi_scan: ^0.4.1
   intl_phone_number_input: ^0.7.4
+  card_stack_widget: ^0.1.5
 
 dev_dependencies:
   flutter_test:
