--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   flutter_local_notifications: ^17.0.0
   firebase_messaging: ^14.8.0
   secure_shared_preferences: ^0.0.4
-  sms_autofill: ^2.3.1
+  pinput: ^5.0.0
   flutter_timezone: ^1.0.8
   firebase_app_check: ^0.2.2+1
   http: ^1.2.1
