--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -91,5 +91,6 @@ dependencies {
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
     implementation(platform("com.google.firebase:firebase-bom:33.1.1"))
     implementation("com.google.firebase:firebase-analytics")
-
+    implementation("com.google.firebase:firebase-auth")
+    implementation("androidx.browser:browser:1.3.0")
 }
