Fix custom med on search medications page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   intl_phone_number_input: ^0.7.4
   card_stack_widget: ^0.1.5
   shared_preferences: ^2.2.3
+  image_cropper: ^5.0.1
 
 dev_dependencies:
   flutter_test:
