Implement edit image on profile picture and do some fixes on the cargiver flow

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -58,6 +58,10 @@
 	<string>This app uses location for connecting to LiviPod</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Used to demonstrate image picker plugin</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Used to capture audio for image picker plugin</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
