--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.2+6
+version: 1.0.2+7
 
 environment:
   sdk: '>=3.1.3 <4.0.0'
@@ -66,6 +66,7 @@ dependencies:
   card_stack_widget: ^0.1.5
   shared_preferences: ^2.2.3
   image_cropper: ^5.0.1
+  package_info_plus: ^8.0.0
 
 dev_dependencies:
   flutter_test:
