--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   shared_preferences: ^2.2.3
   image_cropper: ^5.0.1
   package_info_plus: ^8.0.0
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
