--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,9 @@ dependencies:
   dropdown_button2: ^2.3.9
   regexed_validator: ^2.0.0+1
   pdf: ^3.11.0
+  path_provider: ^2.1.3
+  share_plus: ^9.0.0
+  syncfusion_flutter_datagrid: ^26.2.5
   
 dev_dependencies:
   flutter_test:
